<resources>
    <string name="app_name">Explore Way</string>
    <string name="title">Exploreways</string>
    <string name="title1">Plan Your</string>
    <string name="title2">Vacations - Trip</string>
    <string name="choose">Choose Your Location</string>
    <string name="login">Login in or Login With</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="email">Email Address</string>
    <string name="fg_password">Forgot Password ?</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Sign Up</string>
    <string name="newaccount">Need to Create an Account</string>
    <string name="already_account">Already have an Account</string>
    <string name="account_title">Sign up for the Explore ways app</string>
    <string name="title_activity_user_dashboard">userDashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>